--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,5 +1,6 @@
 main > .container {
     padding: 70px 15px 20px;
+    background-color: #f9f9fc; /* Fondo azul */
 }
 
 .footer {
@@ -107,4 +108,47 @@ a.desc:after {
 .banner-image {
     max-width: 100%;
     height: auto;
+}
+.hidden {
+    display: none;
+}
+.row-pending {
+    background-color: #f8d7da; /* Rojo claro */
+}
+.row-reviewed {
+    background-color: #d4edda; /* Verde claro */
+}
+.banner {
+    text-align: center;
+    margin-bottom: 0px;
+}
+.banner img {
+    max-width: 100%;
+    height: 200px; /* Ajusta este valor según tus necesidades */
+    width: 1400px; 
+    
+}
+.titulo_principal{    
+        
+        background-color: #0d1469; /* Fondo azul */
+        color: white; /* Letras blancas */
+        font-family: Arial, sans-serif; /* Fuente */
+        font-size: 1.5em; /* Tamaño de la fuente */
+        margin-bottom: 20px; /* Espaciado inferior */
+        padding: 15px; /* Relleno para mejorar la apariencia */
+        text-transform: uppercase; /* Transformar el texto a mayúsculas */
+        font-weight: bold; /* Poner el texto en negritas */
+        border-radius: 5px; /* Bordes redondeados para un mejor efecto visual */
+        text-align: center; /* Texto centrado */
+}
+.titulo_secundario {    
+        background-color: #2659a7;
+        color: white; /* Letras blancas */
+        font-family: Arial, sans-serif; /* Fuente */
+        font-size: 1.00em; /* Tamaño de la fuente */
+        margin-bottom: 10px; /* Espaciado inferior */
+        padding: 5px; /* Relleno para mejorar la apariencia */
+        text-transform: uppercase; /* Transformar el texto a mayúsculas */
+        font-weight: bold; /* Poner el texto en negritas */
+        border-radius: 5px; /* Bordes redondeados para un mejor efecto visual */
 }
