--- a/web/css/site.css
+++ b/web/css/site.css
@@ -136,6 +136,15 @@ table.kv-grid-table .estado-pendiente {
 .estado-rechazado {
     background-color: #cac9c9 !important; /* Gris */
 }
+.hidden {
+    display: none;
+}
+.row-pending {
+    background-color: #f8d7da; /* Rojo claro */
+}
+.row-reviewed {
+    background-color: #d4edda; /* Verde claro */
+}
 .banner {
     text-align: center;
     margin-bottom: 0px;
@@ -143,7 +152,8 @@ table.kv-grid-table .estado-pendiente {
 .banner img {
     max-width: 100%;
     height: 200px; /* Ajusta este valor según tus necesidades */
-    width: 1400px;     
+    width: 1400px; 
+    
 }
 .titulo_principal{    
         
