--- a/web/css/site.css
+++ b/web/css/site.css
@@ -139,14 +139,14 @@ table.kv-grid-table .estado-pendiente {
 .hidden {
     display: none;
 }
-.row-pending {
-    background-color: #f8d7da; /* Rojo claro */
+.estado-pendiente {
+    background-color: #f8d7da !important; /* Rojo claro */
 }
-.row-reviewed {
-    background-color: #d4edda; /* Verde claro */
+.estado-revisado {
+    background-color: #d4edda !important; /* Verde claro */
 }
-.row-reject {
-    background-color: #cac9c9; /* Gris */
+.estado-rechazado {
+    background-color: #cac9c9 !important; /* Gris */
 }
 .banner {
     text-align: center;
@@ -155,8 +155,7 @@ table.kv-grid-table .estado-pendiente {
 .banner img {
     max-width: 100%;
     height: 200px; /* Ajusta este valor según tus necesidades */
-    width: 1400px; 
-    
+    width: 1400px;     
 }
 .titulo_principal{    
         
