--- a/web/css/site.css
+++ b/web/css/site.css
@@ -139,8 +139,9 @@ table.kv-grid-table .estado-pendiente {
 .hidden {
     display: none;
 }
-.estado-pendiente {
-    background-color: #f8d7da !important; /* Rojo claro */
+
+table.kv-grid-table .estado-pendiente {
+    background-color: #f8d7da !important; 
 }
 .estado-revisado {
     background-color: #d4edda !important; /* Verde claro */
@@ -190,4 +191,7 @@ table.kv-grid-table .estado-pendiente {
     font-size: 12px; /* Tamaño de la letra pequeña */
     border-radius: 3px; /* Esquinas redondeadas */
     font-family: Arial, sans-serif; /* Fuente */
+}
+.kv-grid-table table .table-bordered .table-striped .kv-table-wrap{
+    background-color: #0d1469;
 }
