--- a/web/css/site.css
+++ b/web/css/site.css
@@ -112,16 +112,6 @@ a.desc:after {
 .hidden {
     display: none;
 }
-
-table.kv-grid-table .estado-pendiente {
-    background-color: #f8d7da !important; 
-}
-.estado-revisado {
-    background-color: #d4edda !important; /* Verde claro */
-}
-.estado-rechazado {
-    background-color: #cac9c9 !important; /* Gris */
-}
 .banner {
     text-align: center;
     margin-bottom: 0px;
@@ -165,6 +155,27 @@ table.kv-grid-table .estado-pendiente {
     border-radius: 3px; /* Esquinas redondeadas */
     font-family: Arial, sans-serif; /* Fuente */
 }
-.kv-grid-table table .table-bordered .table-striped .kv-table-wrap{
-    background-color: #0d1469;
+/* Aumentar especificidad si es necesario */
+html body .kv-grid-table.table.table-bordered.table-striped.kv-table-wrap tr.estado-pendiente td {
+    background-color: rgb(250, 250, 192) !important;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    color: black;
+    font-weight: lighter;
+}
+
+html body .kv-grid-table.table.table-bordered.table-striped.kv-table-wrap tr.estado-revisado td {
+    background-color: rgb(207, 250, 207) !important;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    color: black;
+    font-weight: lighter;
+}
+
+html body .kv-grid-table.table.table-bordered.table-striped.kv-table-wrap tr.estado-rechazado td {
+    background-color: rgb(250, 219, 219) !important;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    color: black;
+    font-weight: lighter;
 }
