--- a/web/css/site.css
+++ b/web/css/site.css
@@ -179,3 +179,66 @@ html body .kv-grid-table.table.table-bordered.table-striped.kv-table-wrap tr.est
     color: black;
     font-weight: lighter;
 }
+html body .kv-grid-table.table.table-bordered.table-striped.kv-table-wrap tr.estado-insitu td {
+    background-color: rgba(124, 176, 211, 0.486) !important;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    color: black;
+    font-weight: lighter;
+}
+.menu-title {
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+    color: #2c3e50;
+    margin-bottom: 20px;
+}
+.menu-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.menu-item {
+    text-align: center;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 500px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.menu-item:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.menu-image {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.menu-text {
+    font-family: 'Arial', sans-serif;
+    font-size: 18px;
+    color: #34495e;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ccc;
+}
+.menu-title {
+        text-align: center;
+        font-family: 'Georgia', serif;
+        font-size: 26px;
+        color: #2c3e50;
+        margin: 20px 0;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        background: linear-gradient(to right, #4c53af, #8881c7);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: bold;
+}
+.imagen-carrusel {
+    width: 100%;
+    height: auto; /* Mantiene la proporción */
+}
